# minimax-ymcp

./: LICENSE  README.md  README_EN.md  pyproject.toml  中文说明书.md
minimax_ymcp/: __init__.py  client.py  const.py  server.py  utils.py
